--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<html>
+    <head> </head>
+    <link rel="stylesheet" href="./styles.css" />
+    <body onload="drawEyes()">
+      <div class="eyes">
+        <div class="eye">
+          <div class="ball"></div>
+        </div>
+        <div class="eye">
+          <div class="ball"></div>
+        </div>
+      </div>
+      <script src="eyes.js"></script>
+    </body>
+  </html>
+  
